--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -25,24 +25,24 @@
     <main>
       <div class="about" id="about">
         <h2>About Me</h2>
-        <div class="about__content content">
-          <div class="content__item item-content">
-            <h3 class="item-content__title">Background</h3>
-            <div class="item-content__text">
+        <div class="about-content">
+          <div class="about-content__item item-content-about">
+            <h3 class="item-content-about__title">Background</h3>
+            <div class="item-content-about__text">
               I'm a driven web designer with a strong foundation in design principles and a passion
               for crafting engaging online experiences.
             </div>
           </div>
-          <div class="content__item item-content">
-            <h3 class="item-content__title"><a href="#skills">Skills</a></h3>
-            <div class="item-content__text">
+          <div class="about-content__item item-content-about">
+            <h3 class="item-content-about__title"><a href="#skills">Skills</a></h3>
+            <div class="item-content-about__text">
               I have a deep understanding of user interface design, user experience, and web
               development technologies.
             </div>
           </div>
-          <div class="content__item item-content">
-            <h3 class="item-content__title">Motivation</h3>
-            <div class="item-content__text">
+          <div class="about-content__item item-content-about">
+            <h3 class="item-content-about__title">Motivation</h3>
+            <div class="item-content-about__text">
               I'm dedicated to creating high-quality websites that meet the needs of my clients and
               engage their target audience.
             </div>
