--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -7,108 +7,110 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">
-        My name is <a href="#about">Vasyl</a> I will be happy to cooperate with you!
+      <h1 class="header-title">
+        My name is <a href="#about-me">Vasyl</a> I will be happy to cooperate with you!
       </h1>
-      <div class="header__image">
-        <img src="img/medium.webp" alt="cat, my favorite animal" />
+      <div class="header-image">
+        <img src="img/medium.webp" alt="picture portrait of a cat in a hat and kimono" />
       </div>
-      <div class="header__text">
+      <div class="header-text">
         <p>
           I'm a passionate web designer specializing in creating visually stunning and user-friendly
           websites.
         </p>
       </div>
-      <a href="#contacts" class="header__button button"> Contact Me</a>
-      <a href="#my__works" class="header__button button"> View Projects </a>
+      <a href="#contacts" class="header-button button"> Contact Me</a>
+      <a href="#my__works" class="header-button button"> View Projects </a>
     </header>
     <main>
-      <div class="about" id="about">
+      <div class="about-me" id="about-me">
         <h2>About Me</h2>
-        <div class="about-content">
-          <div class="about-content__item item-content-about">
-            <h3 class="item-content-about__title">Background</h3>
-            <div class="item-content-about__text">
+        <div class="about-me-content">
+          <div class="about-me-content-item item-content-about-me">
+            <h3 class="item-content-about-me-title">Background</h3>
+            <div class="item-content-about-me-text">
               I'm a driven web designer with a strong foundation in design principles and a passion
-              for crafting engaging online experiences.
+              for crafting engaging online <mark>experiences</mark>.
             </div>
           </div>
-          <div class="about-content__item item-content-about">
-            <h3 class="item-content-about__title"><a href="#skills">Skills</a></h3>
-            <div class="item-content-about__text">
+          <div class="about-me-content-item item-content-about-me">
+            <h3 class="item-content-about-me-title"><a href="#my-skills">Skills</a></h3>
+            <div class="item-content-about-me-text">
               I have a deep understanding of user interface design, user experience, and web
               development technologies.
             </div>
           </div>
-          <div class="about-content__item item-content-about">
-            <h3 class="item-content-about__title">Motivation</h3>
-            <div class="item-content-about__text">
-              I'm dedicated to creating high-quality websites that meet the needs of my clients and
-              engage their target audience.
+          <div class="about-me-content-item item-content-about-me">
+            <h3 class="item-content-about-me-title">Motivation</h3>
+            <div class="item-content-about-me-text">
+              I'm dedicated to <strong>creating high-quality websites</strong> that meet the needs
+              of my clients and engage their target audience.
             </div>
           </div>
         </div>
       </div>
-      <div class="skills" id="skills">
-        <h2 class="skills__title">My Skills</h2>
-        <ol class="skills__list">
-          <li>
-            <h3 class="skills__lable">User Interface Design</h3>
-            <div class="skills__description">
+      <div class="my-skills" id="my-skills">
+        <h2 class="my-skills-title">My Skills</h2>
+        <ol class="my-skills-list">
+          <li class="my-skills-item item-my-skills">
+            <h3 class="item-my-skills-lable">User Interface Design</h3>
+            <div class="item-my-skills-description">
               I create intuitive and visually appealing interfaces that are easy to use and
               navigate.
             </div>
           </li>
-          <li>
-            <h3 class="skills__lable">User Experience</h3>
-            <div class="skills__description">
+          <li lass="my-skills-item item-my-skills">
+            <h3 class="item-my-skills-lable">User Experience</h3>
+            <div class="item-my-skills-description">
               I focus on understanding user needs and creating engaging and enjoyable website
               experiences.
             </div>
           </li>
-          <li>
-            <h3 class="skills__lable">Web Development</h3>
-            <div class="skills__description">
+          <li lass="my-skills-item item-my-skills">
+            <h3 class="item-my-skills-lable">Web Development</h3>
+            <div class="item-my-skills-description">
               I'm proficient in HTML, CSS, and JavaScript, and I'm comfortable working with various
               content management systems.
             </div>
           </li>
-          <li>
-            <h3 class="skills__lable">Visual Design</h3>
-            <div class="skills__description">
-              I have a keen eye for detail and a strong understanding of color theory, typography,
+          <li lass="my-skills-item item-my-skills">
+            <h3 class="item-my-skills-lable">Visual Design</h3>
+            <div class="item-my-skills-description">
+              I have a keen eye for detail and a strong understanding of
+              <i>color theory, typography,</i>
               and layout.
             </div>
           </li>
         </ol>
-        <div class="skills__img">
-          <img src="img/background.webp" alt="background" />
+        <div class="my-skills-img">
+          <img src="img/background.webp" alt="multi-colored lines that cross each other" />
         </div>
       </div>
-      <div class="my-work" id="my__works">
-        <h2 class="my-work__title">My Work</h2>
-        <div class="my-work__content content-my-work">
-          <div class="content-my-work__item">
-            <h3 class="content-my-work__title">E-commerce Website</h3>
-            <div class="content-my-work__text">
+      <div class="my-work" id="my-work">
+        <h2 class="my-work-title">My Work</h2>
+        <div class="my-work-content content-my-work">
+          <div class="content-my-work-item item-my-work">
+            <h3 class="item-my-work-title">E-commerce Website</h3>
+            <div class="item-my-work-text">
               <p>
-                Developed a user-friendly online store with a focus on product showcase, seamless
-                checkout, and mobile responsiveness.
+                Developed a user-friendly online store with a
+                <strong>focus on product showcase, seamless checkout</strong>, and mobile
+                responsiveness.
               </p>
             </div>
           </div>
-          <div class="content-my-work__item">
-            <h3 class="content-my-work__title">Business Website</h3>
-            <div class="content-my-work__text">
+          <div class="content-my-work-item item-my-work">
+            <h3 class="item-my-work-title">Business Website</h3>
+            <div class="item-my-work-text">
               <p>
                 Created a modern website with a strong brand identity, showcasing the company's
                 services, portfolio, and testimonials.
               </p>
             </div>
           </div>
-          <div class="content-my-work__item">
-            <h3 class="content-my-work__title">Portfolio Website</h3>
-            <div class="content-my-work__text">
+          <div class="content-my-work-item item-my-work">
+            <h3 class="item-my-work-title">Portfolio Website</h3>
+            <div class="item-my-work-text">
               <p>
                 Designed a visually engaging portfolio website that highlights my design skills,
                 experience, and personal style.
@@ -118,46 +120,49 @@
         </div>
       </div>
       <div class="testimpnials" id="testimpnials">
-        <h2 class="testimpnials__title">Testimonials</h2>
-        <div class="testimpnials__lable">Client Feedback</div>
-        <ul>
-          <li>
-            “John was a pleasure to work with. He understood my vision and brought it to life with a
-            beautiful and functional website. I highly recommend his services.” - Sarah, Founder of
-            [Company Name]
-          </li>
-          <li>
-            “John's creativity and attention to detail are exceptional. He went above and beyond to
-            create a website that exceeded my expectations.” - David, CEO of [Company Name]
-          </li>
-        </ul>
+        <h2 class="testimpnials-title">Testimonials</h2>
+        <div class="testimpnials-list list-testimpnials">
+          <h3 class="list-testimpnials-title">Client Feedback</h3>
+          <ul class="list-testimpnials-item item-testimonials">
+            <li class="item-testimonials">
+              “<a class="item-testimonials-link" href="#about-me"><strong>Vasyl</strong></a> was a
+              pleasure to work with. He understood my vision and brought it to life with a beautiful
+              and functional website. I highly recommend his services.” - <i>Sarah</i>, Founder of
+              <a href="#" class="item-testimonials-link"><strong>Angledance</strong></a>
+            </li>
+            <li class="item-testimonials">
+              “<a class="item-testimonials-link" href="#about-me"><strong>Vasyl</strong></a>
+              creativity and attention to detail are exceptional. He went above and beyond to create
+              a website that exceeded my expectations.” - <i>David</i>, CEO of
+              <a href="#" class="item-testimonials-link"><strong>[Company Name]</strong></a>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="contacts" id="contacts">
-        <h2 class="contacts__title">Contact Me</h2>
-        <div class="contacts__text">
+        <h2 class="contacts-title">Contact Me</h2>
+        < class="contacts-text">
           <p>
             I'm always open to discussing your web design needs. Please feel free to reach out to me
             via email or phone.
           </p>
-          <div class="contacts__links">
-            <ol>
-              <li>
-                <a href="mailto:J8Ueh@example.com" class="contacts__link">J8Ueh@example.com</a>
+           <ol class="contacts-list list-contacts">
+              <li class="list-contacts-item item-contacts">
+                <a href="mailto:J8Ueh@example.com" class="item-contacts-link">J8Ueh@example.com</a>
               </li>
-              <li><a href="tel:+380123456789" class="contacts__link">+380123456789</a></li>
-              <li>
-                <a href="https://github.com/JohnVasyl" class="contacts__link" target="_blank"
-                  >github.com/JohnVasyl</a
+              <li  class="list-contacts-item item-contacts"><a href="tel:+380123456789" class="item-contacts-link">+380123456789</a></li>
+              <li class="list-contacts-item item-contacts">
+                <a href="https://stalmax76.github.io/lessons/lesson_02/"class="item-contacts-link" target="_blank"
+                  >github.com/Stalmax76</a
                 >
               </li>
             </ol>
           </div>
-        </div>
       </div>
     </main>
     <footer>
-      <p class="footer__text">© 2023 John Vasyl</p>
-      <p class="footer__text">All rights reserved</p>
+      <p class="footer-text">© 2023 John Vasyl</p>
+      <p class="footer-text">All rights reserved</p>
     </footer>
   </body>
 </html>
