--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -59,21 +59,21 @@
               navigate.
             </div>
           </li>
-          <li lass="my-skills-item item-my-skills">
+          <li class="my-skills-item item-my-skills">
             <h3 class="item-my-skills-lable">User Experience</h3>
             <div class="item-my-skills-description">
               I focus on understanding user needs and creating engaging and enjoyable website
               experiences.
             </div>
           </li>
-          <li lass="my-skills-item item-my-skills">
+          <li class="my-skills-item item-my-skills">
             <h3 class="item-my-skills-lable">Web Development</h3>
             <div class="item-my-skills-description">
               I'm proficient in HTML, CSS, and JavaScript, and I'm comfortable working with various
               content management systems.
             </div>
           </li>
-          <li lass="my-skills-item item-my-skills">
+          <li class="my-skills-item item-my-skills">
             <h3 class="item-my-skills-lable">Visual Design</h3>
             <div class="item-my-skills-description">
               I have a keen eye for detail and a strong understanding of
@@ -141,23 +141,28 @@
       </div>
       <div class="contacts" id="contacts">
         <h2 class="contacts-title">Contact Me</h2>
-        < class="contacts-text">
+        <div class="contacts-text">
           <p>
             I'm always open to discussing your web design needs. Please feel free to reach out to me
             via email or phone.
           </p>
-           <ol class="contacts-list list-contacts">
-              <li class="list-contacts-item item-contacts">
-                <a href="mailto:J8Ueh@example.com" class="item-contacts-link">J8Ueh@example.com</a>
-              </li>
-              <li  class="list-contacts-item item-contacts"><a href="tel:+380123456789" class="item-contacts-link">+380123456789</a></li>
-              <li class="list-contacts-item item-contacts">
-                <a href="https://stalmax76.github.io/lessons/lesson_02/"class="item-contacts-link" target="_blank"
-                  >github.com/Stalmax76</a
-                >
-              </li>
-            </ol>
-          </div>
+        </div>
+        <ol class="contacts-list list-contacts">
+          <li class="list-contacts-item item-contacts">
+            <a href="mailto:J8Ueh@example.com" class="item-contacts-link">J8Ueh@example.com</a>
+          </li>
+          <li class="list-contacts-item item-contacts">
+            <a href="tel:+380123456789" class="item-contacts-link">+380123456789</a>
+          </li>
+          <li class="list-contacts-item item-contacts">
+            <a
+              href="https://stalmax76.github.io/lessons/lesson_02/"
+              class="item-contacts-link"
+              target="_blank"
+              >github.com/Stalmax76</a
+            >
+          </li>
+        </ol>
       </div>
     </main>
     <footer>
