--- a/lesson_02/index.html
+++ b/lesson_02/index.html
@@ -20,7 +20,7 @@
         </p>
       </div>
       <a href="#contacts" class="header-button button"> Contact Me</a>
-      <a href="#my__works" class="header-button button"> View Projects </a>
+      <a href="#my-works" class="header-button button"> View Projects </a>
     </header>
     <main>
       <div class="about-me" id="about-me">
@@ -86,8 +86,8 @@
           <img src="img/background.webp" alt="multi-colored lines that cross each other" />
         </div>
       </div>
-      <div class="my-work" id="my-work">
-        <h2 class="my-work-title">My Work</h2>
+      <div class="my-work" id="my-works">
+        <h2 class="my-work-title">My Works</h2>
         <div class="my-work-content content-my-work">
           <div class="content-my-work-item item-my-work">
             <h3 class="item-my-work-title">E-commerce Website</h3>
@@ -159,7 +159,7 @@
               href="https://stalmax76.github.io/lessons/lesson_02/"
               class="item-contacts-link"
               target="_blank"
-              >github.com/Stalmax76</a
+              >github.com/stalmax76</a
             >
           </li>
         </ol>
