--- a/lesson_03/index.html
+++ b/lesson_03/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson_03</title>
+    <title>Lesson 03</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <h1 class="header-title">News of Ukraine</h1>
+      <h1 class="header-title" lang="en">News of Ukraine</h1>
       <ul class="header-menu menu">
         <li class="menu-item"><a href="#city-page">Місто </a></li>
         <li class="menu-item"><a href="#big-block">ЗСУ</a></li>
@@ -25,7 +25,7 @@
         <div class="city-items">
           <article class="city-item">
             <h2>14 вересня на Київщині без відключень електроенергії</h2>
-            <img src="img/01.jpg" alt="electric light bulb in the hands of a person" />
+            <img src="img/01.jpg" alt="Єлектрична лампочка в долонях людини" />
             <p>
               За інформацією Укренерго, у суботу, 14 вересня, обмежень в електропостачанні на
               Київщині не прогнозується <br />
@@ -49,7 +49,7 @@
           </article>
           <article class="city-item">
             <h2>Під Києвом жінка знайшла посеред вулиці міну</h2>
-            <img src="img/02.jpg" alt="a shot of a mine in the ground" />
+            <img src="img/02.jpg" alt="частина військової міни в землі" />
             <h3>
               У п'ятницю, 13 вересня, в Ірпені місцева мешканки виявила небезпечну мінометну міну
               "НОНА". Сапери знешкодили смертоносний боєприпас
@@ -76,7 +76,7 @@
               "Вона могла б наробити серйозних неприємностей, якби не вчасне повідомлення жінки", —
               наголосили рятувальники.
             </p>
-            <img src="img/03.jpg" alt="the rescuer lifts the mine" />
+            <img src="img/03.jpg" alt="український сапер пїднімає не розірвавшуся міну" />
             <p>
               Нагадаємо, минулого тижня сапери
               <a
@@ -90,6 +90,7 @@
         </div>
       </div>
       <div class="big-block" id="big-block">
+        <h1>Терміново!!!</h1>
         <article>
           <h2>ЗСУ отримали закуплені Данією українські гаубиці “Богдана”</h2>
           <p>
@@ -105,7 +106,7 @@
             На стартову гру Ліги чемпіонів відправилися 28 гравців Шахтаря: відома заявка
             українського клубу на гру з Болоньєю
           </h2>
-          <img src="img/sport/01.webp" alt="the picture of the ukrainian football team" />
+          <img src="img/sport/01.webp" alt="знімок команди на стадіоні перед матчем" />
           <h3>
             Тренерський штаб Шахтаря визначився зі складом команди на матч першого туру Ліги
             чемпіонів сезону 2024/25 проти Болоньї. До заявки української команди увійшли 28
@@ -163,5 +164,6 @@
         </article>
       </div>
     </main>
+    <footer><p>&copy; 2024 Всі права захищені. Інформація надана для освітніх цілей.</p></footer>
   </body>
 </html>
