--- a/lesson_05/index.html
+++ b/lesson_05/index.html
@@ -7,196 +7,207 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="lessons">
-      <h1>Lesson 05</h1>
-      <div class="lessons-wrapper">
-        <div class="task-one one">
-          <h2 class="one-title">We Provide you streaming experience across various devices.</h2>
-          <div class="one-subtitle">
-            <p>
-              With StreamVibe, you can enjoy your favorite movies and TV shows anytime, anywhere.
-              Our platform is designed to be compatible with a wide range of devices, ensuring that
-              you never miss a moment of entertainment.
-            </p>
-          </div>
-          <div class="one-content">
-            <div class="one-content-item item-one-content">
-              <div class="item-one-content-header header-content-item">
-                <div class="header-content-item-image">
-                  <img src="img/taskOne/icons/01.svg" alt="picture of the smartfon" />
-                </div>
-                <div class="header-content-item-title"><h3>Smartphones</h3></div>
-              </div>
-              <div class="item-one-content-text">
-                <p>
-                  StreamVibe is optimized for both Android and iOS smartphones. Download our app
-                  from the Google Play Store or the Apple App Store
-                </p>
+    <div class="wrapper">
+      <header>
+        <div class="header-container">
+          <h1>Lesson 05</h1>
+        </div>
+      </header>
+      <main>
+        <div class="task-one">
+          <div class="task-one-container">
+            <div class="task-one-header header-one">
+              <h2 class="header-one-title">
+                We Provide you streaming experience across various devices.
+              </h2>
+              <div class="header-one-text">
+                With StreamVibe, you can enjoy your favorite movies and TV shows anytime, anywhere.
+                Our platform is designed to be compatible with a wide range of devices, ensuring
+                that you never miss a moment of entertainment.
               </div>
             </div>
-            <div class="one-content-item item-one-content">
-              <div class="item-one-content-header header-content-item">
-                <div class="header-content-item-image">
-                  <img src="img/taskOne/icons/02.svg" alt="picture of the tablet" />
+            <div class="task-one-items">
+              <div class="task-one-item item-task-one">
+                <div class="item-task-one-header">
+                  <div class="item-task-one-img">
+                    <img src="img/taskOne/icons/01.svg" alt="the picture os phone" />
+                  </div>
+                  <h3 class="item-task-one-title">Smartphones</h3>
                 </div>
-                <div class="header-content-item-title"><h3>Tablet</h3></div>
-              </div>
-              <div class="item-one-content-text">
-                <p>
-                  StreamVibe is optimized for both Android and iOS smartphones. Download our app
-                  from the Google Play Store or the Apple App Store
-                </p>
-              </div>
-            </div>
-            <div class="one-content-item item-one-content">
-              <div class="item-one-content-header header-content-item">
-                <div class="header-content-item-image">
-                  <img src="img/taskOne/icons/03.svg" alt="picture of the smart TV " />
+                <div class="item-task-one-text">
+                  <p>
+                    StreamVibe is optimized for both Android and iOS smartphones. Download our app
+                    from the Google Play Store or the Apple App Store
+                  </p>
                 </div>
-                <div class="header-content-item-title"><h3>Smart TV</h3></div>
               </div>
-              <div class="item-one-content-text">
-                <p>
-                  StreamVibe is optimized for both Android and iOS smartphones. Download our app
-                  from the Google Play Store or the Apple App Store
-                </p>
-              </div>
-            </div>
-            <div class="one-content-item item-one-content">
-              <div class="item-one-content-header header-content-item">
-                <div class="header-content-item-image">
-                  <img src="img/taskOne/icons/04.svg" alt="picture of the laptop" />
+              <div class="task-one-item item-task-one">
+                <div class="item-task-one-header">
+                  <div class="item-task-one-img">
+                    <img src="img/taskOne/icons/02.svg" alt="the picture os tablet" />
+                  </div>
+                  <h3 class="item-task-one-title">Tablet</h3>
                 </div>
-                <div class="header-content-item-title"><h3>Laptops</h3></div>
-              </div>
-              <div class="item-one-content-text">
-                <p>
-                  StreamVibe is optimized for both Android and iOS smartphones. Download our app
-                  from the Google Play Store or the Apple App Store
-                </p>
-              </div>
-            </div>
-            <div class="one-content-item item-one-content">
-              <div class="item-one-content-header header-content-item">
-                <div class="header-content-item-image">
-                  <img
-                    src="img/taskOne/icons/05.svg"
-                    alt="picture of the Gaming consol's keyboard                    " />
+                <div class="item-task-one-text">
+                  <p>
+                    StreamVibe is optimized for both Android and iOS smartphones. Download our app
+                    from the Google Play Store or the Apple App Store
+                  </p>
                 </div>
-                <div class="header-content-item-title"><h3>Gaming Consoles</h3></div>
               </div>
-              <div class="item-one-content-text">
-                <p>
-                  StreamVibe is optimized for both Android and iOS smartphones. Download our app
-                  from the Google Play Store or the Apple App Store
-                </p>
-              </div>
-            </div>
-            <div class="one-content-item item-one-content">
-              <div class="item-one-content-header header-content-item">
-                <div class="header-content-item-image">
-                  <img src="img/taskOne/icons/06.svg" alt="picture of the headsets" />
+              <div class="task-one-item item-task-one">
+                <div class="item-task-one-header">
+                  <div class="item-task-one-img">
+                    <img src="img/taskOne/icons/03.svg" alt="the picture os tv" />
+                  </div>
+                  <h3 class="item-task-one-title">Smart TV</h3>
                 </div>
-                <div class="header-content-item-title"><h3>VR Headsets</h3></div>
+                <div class="item-task-one-text">
+                  <p>
+                    StreamVibe is optimized for both Android and iOS smartphones. Download our app
+                    from the Google Play Store or the Apple App Store
+                  </p>
+                </div>
               </div>
-              <div class="item-one-content-text">
-                <p>
-                  StreamVibe is optimized for both Android and iOS smartphones. Download our app
-                  from the Google Play Store or the Apple App Store
-                </p>
+              <div class="task-one-item item-task-one">
+                <div class="item-task-one-header">
+                  <div class="item-task-one-img">
+                    <img src="img/taskOne/icons/04.svg" alt="the picture of laptop" />
+                  </div>
+                  <h3 class="item-task-one-title">Laptops</h3>
+                </div>
+                <div class="item-task-one-text">
+                  <p>
+                    StreamVibe is optimized for both Android and iOS smartphones. Download our app
+                    from the Google Play Store or the Apple App Store
+                  </p>
+                </div>
+              </div>
+              <div class="task-one-item item-task-one">
+                <div class="item-task-one-header">
+                  <div class="item-task-one-img">
+                    <img src="img/taskOne/icons/05.svg" alt="the picture of game console" />
+                  </div>
+                  <h3 class="item-task-one-title">Gaming Consoles</h3>
+                </div>
+                <div class="item-task-one-text">
+                  <p>
+                    StreamVibe is optimized for both Android and iOS smartphones. Download our app
+                    from the Google Play Store or the Apple App Store
+                  </p>
+                </div>
+              </div>
+              <div class="task-one-item item-task-one">
+                <div class="item-task-one-header">
+                  <div class="item-task-one-img">
+                    <img src="img/taskOne/icons/06.svg" alt="the picture of VR headset" />
+                  </div>
+                  <h3 class="item-task-one-title">VR Headsets</h3>
+                </div>
+                <div class="item-task-one-text">
+                  <p>
+                    StreamVibe is optimized for both Android and iOS smartphones. Download our app
+                    from the Google Play Store or the Apple App Store
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="task-two two">
-          <div class="two-container">
-            <h2 class="two-title">Introduce Your Product Quickly & Effectively</h2>
-            <div class="two-text">
+        <div class="task-two">
+          <div class="task-two-container">
+            <h2 class="task-two-title">Introduce Your Product Quickly & Effectively</h2>
+            <div class="task-two-text">
               <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus
               </p>
-              <br />
               <p>
                 mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
                 consequat massa quis enim.
               </p>
             </div>
-            <div class="two-buttons">
-              <a class="two-button" href="#">Purchase UI Kit</a>
-              <a class="two-button" href="#">Learn More</a>
+            <div class="task-two-buttons">
+              <a href="#" class="task-two-button" id="purchase-btn">Purchase UI Kit</a>
+              <a href="#" class="task-two-button">Learn More</a>
             </div>
           </div>
         </div>
-        <div class="task-three three">
-          <div class="three-container">
-            <h2 class="three-title">Design & Build Your Own Landing Pages</h2>
-            <div class="three-subtitle">
+        <div class="task-three">
+          <div class="task-three-container">
+            <h2 class="task-three-title">
+              Design & Build Your Own <br />
+              Landing Pages
+            </h2>
+            <div class="task-three-text">
               <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus
               </p>
-              <br />
               <p>
                 mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
                 consequat massa quis enim.
               </p>
             </div>
-            <div class="three-cards">
-              <div class="three-card card-three">
-                <div class="card-three-image">
-                  <img src="img/taskThree/01.svg" alt="picture of the card" />
+            <div class="task-three-items">
+              <div class="task-three-item">
+                <div class="task-three-item-img">
+                  <img src="img/taskThree/01.svg" alt="icon-image" />
                 </div>
-                <div class="card-three-title">
-                  <h3>Title Goes Here</h3>
-                </div>
-                <div class="card-three-text">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                  eget dolor.
-                </div>
-              </div>
-              <div class="three-card card-three">
-                <div class="card-three-image">
-                  <img src="img/taskThree/01.svg" alt="picture of the card" />
-                </div>
-                <div class="card-three-title">
-                  <h3>Title Goes Here</h3>
-                </div>
-                <div class="card-three-text">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                  eget dolor.
+                <h3 class="task-three-item-title">Title Goes Here</h3>
+                <div class="task-three-item-text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                    eget dolor.
+                  </p>
                 </div>
               </div>
-              <div class="three-card card-three">
-                <div class="card-three-image">
-                  <img src="img/taskThree/01.svg" alt="picture of the card" />
+              <div class="task-three-item">
+                <div class="task-three-item-img">
+                  <img src="img/taskThree/01.svg" alt="icon-image" />
                 </div>
-                <div class="card-three-title">
-                  <h3>Title Goes Here</h3>
-                </div>
-                <div class="card-three-text">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                  eget dolor.
+                <h3 class="task-three-item-title">Title Goes Here</h3>
+                <div class="task-three-item-text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                    eget dolor.
+                  </p>
                 </div>
               </div>
-              <div class="three-card card-three">
-                <div class="card-three-image">
-                  <img src="img/taskThree/01.svg" alt="picture of the card" />
+              <div class="task-three-item">
+                <div class="task-three-item-img">
+                  <img src="img/taskThree/01.svg" alt="icon-image" />
                 </div>
-                <div class="card-three-title">
-                  <h3>Title Goes Here</h3>
+                <h3 class="task-three-item-title">Title Goes Here</h3>
+                <div class="task-three-item-text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                    eget dolor.
+                  </p>
                 </div>
-                <div class="card-three-text">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                  eget dolor.
+              </div>
+              <div class="task-three-item">
+                <div class="task-three-item-img">
+                  <img src="img/taskThree/01.svg" alt="icon-image" />
+                </div>
+                <h3 class="task-three-item-title">Title Goes Here</h3>
+                <div class="task-three-item-text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                    eget dolor.
+                  </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </main>
+      <footer>
+        <p>&copy; Всі права захищені. Інформація надана для освітніх цілей.</p>
+        <p>24.09.2024</p>
+      </footer>
     </div>
   </body>
 </html>
